CASSSIDECAR-328: Isolate dtest jar in its own classloader for server integration tests
Patch by Francisco Guerrero; reviewed by TBD for CASSSIDECAR-328